#maripbekoff 24.02.2020 20:44 *Full localization

--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -107,7 +107,7 @@
                         <p>
                             Балабақшада біздің балаларымыз ағылшын және қазақ тілдерімен танысады және шығармашылық өнер сабақтарымен айналысады<br>
                         </p>
-                        <a href="learning.html">Өту ></a>
+                        <a href="kz/learning.html">Өту ></a>
                     </div>
                     <div class="col-lg-3 mb-5">
                         <img src="images/icons/2.jpg" width="50%" alt="Услуги">
@@ -115,7 +115,7 @@
                         <p>
                             Сіздің балаңыздың қажеттіліктеріне қарамастан, біздің бағдарламаларымыздың әрқайсысы қолдау көрсетеді.
                         </p>
-                        <a href="growth.html">Өту ></a>
+                        <a href="kz/growth.html">Өту ></a>
                     </div>
                     <div class="col-lg-3 mb-5">
                         <img src="images/icons/3.png" width="50%" alt="Услуги">
@@ -123,7 +123,7 @@
                         <p>
                             Біз балаға көп уақыт бөлеміз. Ашық ойындар оларға командаларда қатысып, шығармашылық элементтері бар ойындарды ойнау мүмкіндік береді.
                         </p>
-                        <a href="discipline.html">Өту ></a>
+                        <a href="kz/discipline.html">Өту ></a>
                     </div>
                     <div class="col-lg-3 mb-5">
                         <img src="images/icons/4.png" width="50%" alt="Услуги">
@@ -131,7 +131,7 @@
                         <p>
                            Біз балалар өздерін қауіпсіз сезінетін және әрқашан бақытты болатын, жылы және қамқор атмосфераны құрғымыз келеді.
                         </p>
-                        <a href="mind.html">Өту ></a>
+                        <a href="kz/mind.html">Өту ></a>
                     </div>
                 </div>
             </div>
@@ -381,15 +381,18 @@
     <!-- reviews end -->
 
     <!-- location start -->
-    <section id="map">
+   <section id="map">
         <a class="dg-widget-link"
-            href="http://2gis.kz/almaty/firm/9429940000794906/center/76.87550067901611,43.25217347103417/zoom/16?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap">Алматы картасында қарау</a>
+            href="http://2gis.kz/almaty/firm/9429940000794906/center/76.87550067901611,43.25217347103417/zoom/16?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap">Посмотреть
+            на карте Алматы</a>
         <div class="dg-widget-link"><a
-                href="http://2gis.kz/almaty/center/76.875214,43.251849/zoom/16/routeTab/rsType/bus/to/76.875214,43.251849╎Детский сад №8?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=route">Балабақшаға дейін жолды табу</a></div>
+                href="http://2gis.kz/almaty/center/76.875214,43.251849/zoom/16/routeTab/rsType/bus/to/76.875214,43.251849╎Детский сад №8?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=route">Найти
+                проезд до Детский сад №8</a></div>
         <script charset="utf-8" src="https://widgets.2gis.com/js/DGWidgetLoader.js"></script>
         <script charset="utf-8">
             new DGWidgetLoader({ "width": "100%", "height": 300, "pos": { "lat": 43.25217347103417, "lon": 76.87550067901611, "zoom": 16 }, "opt": { "city": "almaty" }, "org": [{ "id": "9429940000794906" }] });</script>
-        <noscript style="color:#c00;font-size:16px;font-weight:bold;">Бұл виджет JavaScript қолданады, оны өз браузеріңізде қосуға өтінеміз</noscript>
+        <noscript style="color:#c00;font-size:16px;font-weight:bold;">Виджет карты использует JavaScript. Включите его в
+            настройках вашего браузера.</noscript>
     </section>
     <!-- location end -->
 
