--- a/kindergarten/kz/discipline.html
+++ b/kindergarten/kz/discipline.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="kz">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>График работы Детского Сада</title>
+    <title>Балалар уақытты қалай өткізеді | Яслы-сад №8</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../style/animate.css">
@@ -54,23 +54,23 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="learning.html">Обучение</a>
+                    <a class="nav-link" href="learning.html">Оқыту</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="growth.html">Развитие</a>
+                    <a class="nav-link" href="growth.html">Даму</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Дисциплина</a>
+                    <a class="nav-link" href="#">Тәртіп</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="mind.html">Взгляд</a>
+                    <a class="nav-link" href="mind.html">Көзқарасымыз</a>
                 </li>
                 <li class="nav-item text-center" id="feedbackBtn">
-                    <a class="nav-link" href="index.html">Записаться</a>
+                    <a class="nav-link" href="index.html">Жазылу</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../kz/discipline.html" class="nav-link"><img class="mr-3" src="../images/icons/kazakhstan.png"
-                            alt="" width="30">Қаз</a>
+                    <a href="../ru/discipline.html" class="nav-link"><img class="mr-3" src="../images/icons/russia.png"
+                            alt="" width="30">Рус</a>
                 </li>
             </ul>
         </div>
@@ -78,7 +78,7 @@
     <!-- navbar end -->
 
     <div class="main">
-        <h1>Как дети проводят время</h1>
+        <h1>Балалар уақытты қалай өткізеді</h1>
     </div>
 
     <!-- discipline start -->
@@ -93,11 +93,9 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">Шахматы</h5>
+                                    <h5 class="card-title">Шахмат</h5>
                                     <div class="ux-line"></div>
-                                    <p class="card-text">Игра в шахматы расширяет кругозор, учит думать, быть
-                                        внимательным, запоминать, сравнивать, обобщать, предвидеть результаты своей
-                                        деятельности.
+                                    <p class="card-text">Шахмат ойыны ақыл-ойды кеңейтеді, ойлауға, ұқыпты болуға, есте сақтауға, салыстыруға, жалпылауға, іс-әрекетіңнің нәтижесін болжауға үйретеді.
                                     </p>
                                 </div>
                             </div>
@@ -115,8 +113,7 @@
                                     <h5 class="card-title">Арифметика</h5>
                                     <div class="ux-line"></div>
                                     <p class="card-text">
-                                        Используется для обучения на наглядном примере, который помогает детям понять
-                                        принципы счета, состав числа.
+                                       Ол балаларға мысал келтіре отырып, санау принциптерін, санның құрамын түсінуге көмектесетін жақсы мысалмен оқытуда қолданылады.
                                     </p>
                                 </div>
                             </div>
@@ -131,10 +128,9 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">Физкультура</h5>
+                                    <h5 class="card-title">Дене шынықтыру</h5>
                                     <div class="ux-line"></div>
-                                    <p class="card-text">На физкультуре дети проводят разминку, играют в командные
-                                        спортивные игры с различными спорт снаряжениями.</p>
+                                    <p class="card-text">Дене шынықтыру сабағында балалар жаттығуларды істейді, әртүрлі спорттық жабдықтармен командалық спорттық ойындар ойнайды.</p>
                                 </div>
                             </div>
                         </div>
@@ -150,8 +146,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Хореография</h5>
                                     <div class="ux-line"></div>
-                                    <p class="card-text">Хореография развивает творческое мышление, музыкальность, ритм,
-                                        память, учит быстро реагировать и тонко чувствовать происходящее.</p>
+                                    <p class="card-text">Хореография шығармашылық ойлауды, музыкалық ритмді, есте сақтау қабілеттерін дамытады, не болып жатқанын сезінуге үйретеді.</p>
                                 </div>
                             </div>
                         </div>
@@ -164,7 +159,7 @@
 
     <!-- footer start -->
     <footer class="text-center">
-        <p>Ясли Сад №8. Разработано студентами группы ТЗИ-19Р</p>
+        <p>Ясли Сад №8. Code Union командасымен құрылған.</p>
     </footer>
     <!-- footer end -->
 
