--- a/kindergarten/ru/index.html
+++ b/kindergarten/ru/index.html
@@ -25,7 +25,6 @@
 
     <!-- navbar start -->
     <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
-
         <a class="navbar-brand" href="#"><img src="../images/logo.png" width="100"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -433,9 +432,8 @@
                         </div>
                         <div class="form-group">
                             <select class="form-control" id="form-age">
-                                <option>1-2 лет</option>
-                                <option>2-3 лет</option>
-                                <option>3-4 лет</option>
+                                <option>2-3 года</option>
+                                <option>3-4 года</option>
                                 <option>4-5 лет</option>
                                 <option>5-6 лет</option>
                             </select>
