--- a/kindergarten/ru/mind.html
+++ b/kindergarten/ru/mind.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>График работы Детского Сада</title>
+    <title>Наш взгляд | Ясли-сад №8</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../style/animate.css">
@@ -46,34 +46,33 @@
     </a>
     <!-- navbar start -->
     <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="../images/logo.png" width="100"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="learning.html">Обучение</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="growth.html">Развитие</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="discipline.html">Дисциплина</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Взгляд</a>
-                    </li>
-                    <li class="nav-item text-center" id="feedbackBtn">
-                        <a class="nav-link" href="index.html">Записаться</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="../index.html" class="nav-link"><img class="mr-3" src="../images/icons/kazakhstan.png" alt="" width="30">Қаз</a>
-                    </li>
-                </ul>
-            </div>
+        <a class="navbar-brand" href="index.html"><img src="../images/logo.png" width="100"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="learning.html">Обучение</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="growth.html">Развитие</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="discipline.html">Дисциплина</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Взгляд</a>
+                </li>
+                <li class="nav-item text-center" id="feedbackBtn">
+                    <a class="nav-link" href="index.html">Записаться</a>
+                </li>
+                <li class="nav-item">
+                    <a href="../kz/mind.html" class="nav-link"><img class="mr-3" src="../images/icons/kazakhstan.png"
+                            alt="" width="30">Қаз</a>
+                </li>
+            </ul>
         </div>
     </nav>
     <!-- navbar end -->
@@ -315,7 +314,7 @@
                     учет и аудит.<br>
                     С 1994 года работает бухгалтером.<br>
                     С февраля 2002 года работает главным бухгалтером детского сада №8.
-                </div>  
+                </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
                 </div>
@@ -457,7 +456,7 @@
                     учет и аудит.<br>
                     С 1994 года работает бухгалтером.<br>
                     С февраля 2002 года работает главным бухгалтером детского сада №8.
-                </div>  
+                </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
                 </div>
