--- a/kindergarten/kz/growth.html
+++ b/kindergarten/kz/growth.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="kz">
 
 <head>
     <meta charset="UTF-8">
@@ -54,23 +54,23 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="learning.html">Обучение</a>
+                    <a class="nav-link" href="learning.html">Оқыту</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Развитие</a>
+                    <a class="nav-link" href="#">Даму</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="discipline.html">Дисциплина</a>
+                    <a class="nav-link" href="discipline.html">Тәртіп</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="mind.html">Взгляд</a>
+                    <a class="nav-link" href="mind.html">Көзқарасымыз</a>
                 </li>
                 <li class="nav-item text-center" id="feedbackBtn">
-                    <a class="nav-link" href="index.html">Записаться</a>
+                    <a class="nav-link" href="index.html">Жазылу</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../kz/growth.html" class="nav-link"><img class="mr-3" src="../images/icons/kazakhstan.png"
-                            alt="" width="30">Қаз</a>
+                    <a href="../ru/growth.html" class="nav-link"><img class="mr-3" src="../images/icons/russia.png"
+                            alt="" width="30">Рус</a>
                 </li>
             </ul>
         </div>
@@ -94,11 +94,11 @@
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
+                    <span class="sr-only">Бұрыңғы</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
+                    <span class="sr-only">Келесі</span>
                 </a>
             </div>
         </div>
@@ -107,7 +107,7 @@
 
     <section class="container-fluid courses fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
         <div class="container">
-            <h3 class="text-center">Дополнительные кружки</h3>
+            <h3 class="text-center">Қосымша үйірмелер</h3>
             <div class="row pt-5">
                 <div class="col-lg-6 pb-5">
                     <div class="row no-gutters rounded overflow-hidden position-relative">
@@ -115,9 +115,9 @@
                             <img src="../images/numbers/1.png" alt="" width="100px">
                         </div>
                         <div class="col pl-3">
-                            <h5>Английский</h5>
+                            <h5>Ағылшын</h5>
                             <p class="muted">
-                                Английский - уникальная возможность для вашего ребенка изучать иностранный с первых лет жизни.
+                                Ағылшын - бұл сіздің балаңызға өмірдің алғашқы жылдарынан бастап шетелдік білім алудың керемет мүмкіндігі.
                             </p>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                         <div class="col pl-3">
                             <h5>Хореография</h5>
                             <p class="muted">
-                                Хореография развивает творческое мышление, музыкальность, ритм, память, учит быстро реагировать и тонко чувствовать происходящее.
+                                Хореография шығармашылық ойлауды, музыкалық ритмді, есте сақтау қабілеттерін дамытады, не болып жатқанын сезінуге үйретеді.
                             </p>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
         </div>
     </section>
 
-    <h3 class="text-center">Чему научиться ваш ребёнок</h3>
+    <h3 class="text-center">Балаңыз нені үйренеді</h3>
 
     <section class="pb-5">
         <div class="container">
@@ -151,7 +151,7 @@
                     <ul class="nav nav-pills m-3 justify-content-center" id="pills-tab" role="tablist p-3">
                         <li class="nav-item">
                             <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home"
-                                role="tab" aria-controls="pills-home" aria-selected="true">Английский</a>
+                                role="tab" aria-controls="pills-home" aria-selected="true">Ағылшын</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile"
@@ -162,14 +162,11 @@
                     <div class="tab-content" id="pills-tabContent">
                         <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
                             aria-labelledby="pills-home-tab">
-                            Развитие уже в раннем возрасте речи, чтения и умение писать на английском. Обучение
-                            элементарным и базовым знанием в английском заложит не только хорошую память, но и крепкий
-                            фундамент для изучения других языков в будущем.
+                            Ағылшын тілінде сөйлеу, оқу және жазу дағдыларын ерте жастан дамытамыз. Бастапқы және негізгі білімді ағылшын тілінде оқыту болашақта басқа тілдерді үйренуің жақсы жадын ғана емес, сонымен қатар басқа да тілдерді үйренуің берік негізін қалайды.
                         </div>
                         <div class="tab-pane fade" id="pills-profile" role="tabpanel"
                             aria-labelledby="pills-profile-tab">
-                            Чтобы ребёнок не был скованным и был всегда в хорошем настроении и активный, необходимо
-                            поддерживать его тонусе. Для этого хорошо подходят танцы.
+                            Баланың көңіл-күйі жаман емес, үнемі көңіл-күйде және белсенді болу үшін, оның үнін сақтау керек. Бұл үшін би жақсы үйлеседі.
                         </div>
                     </div>
                 </div>
@@ -179,7 +176,7 @@
 
     <!-- footer start -->
     <footer class="text-center">
-        <p>Ясли Сад №8. Разработано студентами группы ТЗИ-19Р</p>
+        <p>Ясли Сад №8. Code Union командасымен құрылған.</p>
     </footer>
     <!-- footer end -->
 
