--- a/kindergarten/kz/learning.html
+++ b/kindergarten/kz/learning.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="kz">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>График работы Детского Сада</title>
+    <title>Күн тәртібі | Яслы-сад №8</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../style/animate.css">
@@ -45,8 +45,8 @@
         <img src="../images/whatsapp.png" alt="" width="64">
     </a>
     <!-- navbar start -->
-    <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
-        <a class="navbar-brand" href="index.html"><img src="../images/logo.png" width="100"></a>
+   <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
+        <a class="navbar-brand" href="../index.html"><img src="../images/logo.png" width="100"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -54,23 +54,23 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Обучение</a>
+                    <a class="nav-link" href="#">Оқыту</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="growth.html">Развитие</a>
+                    <a class="nav-link" href="growth.html">Даму</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="discipline.html">Дисциплина</a>
+                    <a class="nav-link" href="discipline.html">Тәртіп</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="mind.html">Взгляд</a>
+                    <a class="nav-link" href="mind.html">Көзқарасымыз</a>
                 </li>
                 <li class="nav-item text-center" id="feedbackBtn">
-                    <a class="nav-link" href="index.html">Записаться</a>
+                    <a class="nav-link" href="index.html">Жазылу</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../kz/learning.html" class="nav-link"><img class="mr-3" src="../images/icons/kazakhstan.png"
-                            alt="" width="30">Қаз</a>
+                    <a href="../ru/learning.html" class="nav-link"><img class="mr-3" src="../images/icons/russia.png"
+                            alt="" width="30">Рус</a>
                 </li>
             </ul>
         </div>
@@ -83,12 +83,10 @@
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
                 <p class="timeline-event-thumbnail">08:00 - 9:00</p>
-                <h3>Прием детей</h3>
-                <h4>Мы работаем с 8 часов утра</h4>
+                <h3>Балалады қабылдау</h3>
+                <h4>Біз сағат 8-ден бастап істейміз</h4>
                 <p>
-                    Утренняя разминка проводится одним воспитателем, в летнее время - на улице, под музыкальное
-                    сопровождение. На зарядке
-                    дети играют в спортивные игры с различными спорт снаряжениями.
+                    Таңертеңгілік жаттығуды бір мұғалім, жазда - көшеде, музыкалық сүйемелдеумен жүргізеді. Жаттығу кезінде балалар әртүрлі спорттық жабдықтармен спорттық ойындар ойнайды.
                 </p>
             </div>
         </li>
@@ -96,12 +94,9 @@
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
                 <p class="timeline-event-thumbnail">09:00 - 09:30</p>
-                <h3>Завтрак</h3>
+                <h3>Таңғы ас</h3>
                 <p>
-                    В нашем дестком саду используется только высококачественные натуральные продукты имеющие сертификат
-                    качества. Продукты так же проходят контроль мед. работника и наших поваров. Меню детского сада
-                    утдверждено СЭС, и соответствует всем нормам. В случае аллергии у ребенка, в меню вносятся некоторые
-                    изменения, где по возможности наши повара заменяют одни продукты другими.
+                    Біздің балабақшада тек сапа сертификаты бар жоғары сапалы табиғи өнімдер қолданылады. Өнімдер жұмысшылардың мен аспазшылардың бақылауынан өтеді. Балабақша мәзірі SES-пен бекітілген және барлық стандарттарға сәйкес келеді. Балада аллергия болған жағдайда мәзірге кейбір өзгерістер енгізіледі, мұнда мүмкіндік болса, біздің аспазшылар бір өнімді екінші өніммен алмастырады.
                 </p>
             </div>
         </li>
@@ -109,10 +104,10 @@
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
                 <p class="timeline-event-thumbnail">09:30 - 10:10</p>
-                <h3>Занятия</h3>
-                <h4>по расписанию</h4>
+                <h3>Оқу</h3>
+                <h4>қызметтері</h4>
                 <p>
-                    В это время, дети получают необходимую базу, которая станет ключом к их счастью и успеху в будущем.
+                    Бұл уақытта балалар қажетті негіздерін алады, бұл олардың болашақтағы бақыттары мен табыстарының кепілі болады.
                 </p>
             </div>
         </li>
@@ -120,11 +115,10 @@
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
                 <p class="timeline-event-thumbnail">10:10 - 11:50</p>
-                <h3>Прогулка</h3>
-                <h4>На свежем воздухе</h4>
+                <h3>Серуен</h3>
+                <h4>Таза ауада</h4>
                 <p>
-                    Дети гуляют в любое время года, на прогулке воспитатели проводят занимательные игры, а так же часто
-                    и некоторые занятия: творчество, развитие речи, ознакомления с окружающим миром.
+                  Серуенде мұғалімдер ойын-сауық ойындарын, сонымен қатар бірнеше іс-шараларды өткізеді: шығармашылық, сөйлеуді дамыту, сыртқы әлеммен танысу.
                 </p>
             </div>
         </li>
@@ -132,9 +126,9 @@
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
                 <p class="timeline-event-thumbnail">11:50 - 12:30</p>
-                <h3>Обед</h3>
+                <h3>Түскі ас</h3>
                 <p>
-                    Соответствует утвержденному меню на день.
+                    Бекітілген мәзірге сәйкес келеді.
                 </p>
             </div>
         </li>
@@ -142,11 +136,10 @@
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
                 <p class="timeline-event-thumbnail">12:30 - 15:00</p>
-                <h3>Здоровый сон</h3>
+                <h3>Салауатты</h3>
+                <h4>ұйқы</h4>
                 <p>
-                    В каждой спальне и группе поддерживается комфортная для организма ребенка температура. Постель,
-                    кроватки, полотенца имеют соответствующую маркировку. В спальнях используются в отопительный период
-                    увлажнители воздуха.
+                    Әр жатын бөлмеде және топта баланың денесі үшін қолайлы температура сақталады.
                 </p>
             </div>
         </li>
@@ -154,11 +147,9 @@
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
                 <p class="timeline-event-thumbnail">15:00 - 15:30</p>
-                <h3>Процедуры</h3>
-                <h4>по очищению</h4>
+                <h3>Процедуралар</h3>
                 <p>
-                    Дети постепенно просыпаются, после чего проводятся воздушные, ванные процедуры и проветривание
-                    комнат.
+                    Ауа ванналары, денсаулық жолдары, тұзды трассалар. Жазда: бассейн, жалаң аяқ жүру, күн ванналары.
                 </p>
             </div>
         </li>
@@ -166,9 +157,9 @@
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
                 <p class="timeline-event-thumbnail">15:30 - 16:00</p>
-                <h3>Полдник</h3>
+                <h3>Бесін ас</h3>
                 <p>
-                    По меню на день.
+                    Күні үшін мәзірде.
                 </p>
             </div>
         </li>
@@ -176,19 +167,18 @@
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
                 <p class="timeline-event-thumbnail">16:00 - 16:20</p>
-                <h3>Занятия</h3>
-                <h4>Творчество, подвижные игры, танцы</h4>
+                <h3>Қызметтері</h3>
+                <h4>Шығармашылық, ашық ойындар, би</h4>
             </div>
         </li>
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
                 <p class="timeline-event-thumbnail">16:20 - 17:40</p>
-                <h3>Прогулка</h3>
-                <h4>На свежем воздухе</h4>
+                <h3>Серуендеу</h3>
+                <h4таза ауада</h4>
                 <p>
-                    Дети гуляют в любое время года, на прогулке воспитатели проводят занимательные игры, а так же часто
-                    и некоторые занятия: творчество, развитие речи, ознакомления с окружающим миром.
+                   Серуенде мұғалімдер ойын-сауық ойындарын, сонымен қатар бірнеше іс-шараларды өткізеді: шығармашылық, сөйлеуді дамыту, сыртқы әлеммен танысу.
                 </p>
             </div>
         </li>
@@ -196,10 +186,9 @@
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
                 <p class="timeline-event-thumbnail">17:40 - 18:00</p>
-                <h3>Ужин</h3>
+                <h3>Кешкі ас</h3>
                 <p>
-                    Соответствует утвержденному меню на день. После ужина - прогулка, а так же посещение доп. спортивных
-                    секций по желанию.
+                    Күні үшін бекітілген мәзірге сәйкес келеді. Кешкі астан кейін - серуендеу, қосымша спорт секцияларына бару.
                 </p>
             </div>
         </li>
@@ -207,7 +196,7 @@
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
                 <p class="timeline-event-thumbnail">18:00 - 18:30</p>
-                <h3>Обратно домой</h3>
+                <h3>Үйге қайтуы</h3>
             </div>
         </li>
     </ul>
@@ -215,7 +204,7 @@
 
     <!-- footer start -->
     <footer class="text-center">
-        <p>Ясли Сад №8. Разработано студентами группы ТЗИ-19Р</p>
+        <p>Ясли Сад №8. Code Union командасымен құрылған.</p>
     </footer>
     <!-- footer end -->
 
