--- a/kindergarten/kz/growth.html
+++ b/kindergarten/kz/growth.html
@@ -46,7 +46,7 @@
     </a>
     <!-- navbar start -->
     <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
-        <a class="navbar-brand" href="index.html"><img src="../images/logo.png" width="100"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../images/logo.png" width="100"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
