#maripbekoff 26.02.2020 21:27 *Fully localizated and added new page for welcome

--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ясли Сад №8 - Сіздің балаларыңыз үшін ең жақсы орын!</title>
+    <title>Балабақша №8 - Сіздің балаларыңыз үшін ең жақсы орын!</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/animate.css">
@@ -85,17 +85,6 @@
     </div>
     <!-- banner end -->
 
-    <!-- welcome start -->
-    <div class="welcome">
-        <div class="container text-center pt-5 pb-5">
-            <img src="images/quote.png" alt="" width="64">
-            <h2>Алғы сөз</h2>
-            <p class="w-50 ml-auto mr-auto">Басқадан кем болмас үшін біз білімді, бай һәм күшті болуымыз керек. Күшті
-                болуға бірлік керек. Осы керектердің жолында жұмыс істеуіміз керек</p>
-        </div>
-    </div>
-    <!-- welcome end -->
-
     <!-- services start -->
     <section id="about">
         <div class="container-fluid services-bg">
@@ -141,8 +130,8 @@
         <!-- gallery start -->
         <section class=" gallery p-5">
             <div class="container">
-                <h2>Біздің бақыт галереясы</h2>
-                <p>Мұнда сіз өз балаңыздың <br>күлкісін көре аласыз</p>
+                <h2>Біздің бақыт галереясымыз</h2>
+                <p>Мұнда сіз өз балаларыңыздың <br>қуаныштарың көре аласыз</p>
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -151,12 +140,11 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
                     </ol>
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <img class="d-block w-100" src="images/gallery/photo1.jpg" alt="Первый слайд">
                         </div>
                         <div class="carousel-item">
@@ -171,10 +159,7 @@
                         <div class="carousel-item">
                             <img class="d-block w-100" src="images/gallery/photo5.JPG" alt="Пятый слайд">
                         </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="images/gallery/photo6.JPG" alt="Шестый слайд">
-                        </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item active">
                             <img class="d-block w-100" src="images/gallery/photo7.jpg" alt="Седьмой слайд">
                         </div>
                         <div class="carousel-item">
@@ -383,16 +368,13 @@
     <!-- location start -->
    <section id="map">
         <a class="dg-widget-link"
-            href="http://2gis.kz/almaty/firm/9429940000794906/center/76.87550067901611,43.25217347103417/zoom/16?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap">Посмотреть
-            на карте Алматы</a>
+            href="http://2gis.kz/almaty/firm/9429940000794906/center/76.87550067901611,43.25217347103417/zoom/16?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap">Алматы картадан көру.</a>
         <div class="dg-widget-link"><a
-                href="http://2gis.kz/almaty/center/76.875214,43.251849/zoom/16/routeTab/rsType/bus/to/76.875214,43.251849╎Детский сад №8?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=route">Найти
-                проезд до Детский сад №8</a></div>
+                href="http://2gis.kz/almaty/center/76.875214,43.251849/zoom/16/routeTab/rsType/bus/to/76.875214,43.251849╎Детский сад №8?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=route">Балабақшаға дейін жолды табу</a></div>
         <script charset="utf-8" src="https://widgets.2gis.com/js/DGWidgetLoader.js"></script>
         <script charset="utf-8">
             new DGWidgetLoader({ "width": "100%", "height": 300, "pos": { "lat": 43.25217347103417, "lon": 76.87550067901611, "zoom": 16 }, "opt": { "city": "almaty" }, "org": [{ "id": "9429940000794906" }] });</script>
-        <noscript style="color:#c00;font-size:16px;font-weight:bold;">Виджет карты использует JavaScript. Включите его в
-            настройках вашего браузера.</noscript>
+        <noscript style="color:#c00;font-size:16px;font-weight:bold;">Бұл виджет javascript'ті қажет етеді, оны қосуға өтінеміз.</noscript>
     </section>
     <!-- location end -->
 
@@ -404,7 +386,7 @@
                     <!-- <img src="images/kid.png" alt=""> -->
                     <h3 class="m-0">Бізбен байланысыңыз</h3><br>
                     <p class="text-muted">Егер сізде сұрақтар болса - жазыңыз, қоңырау шалып, келіңіз.</p>
-                    <p class="text-muted">Алматы<br>Яслы-сад: Брусиловский көшесі 19<br>Телефон: +7 (727) 374‒16‒20</p>
+                    <p class="text-muted">Алматы<br>Балабақша №8: Брусиловский көшесі 19<br>Телефон: +7 (727) 374‒16‒20</p>
                 </div>
                 <div class="col-md-6">
                     <form id="form" class="w-75 pt-5" method="POST">
@@ -441,7 +423,7 @@
 
     <!-- footer start -->
     <footer class="text-center">
-        <p>Ясли Сад №8. Code Union командасымен құрылған.</p>
+        <p>Балабақша №8. Code Union командасымен құрылған.</p>
     </footer>
     <!-- footer end -->
 
