--- a/kindergarten/kz/mind.html
+++ b/kindergarten/kz/mind.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Біздің көзқарасымыз | Яслы-сад №8</title>
+    <title>Біздің көзқарасымыз | Балабақша №8</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../style/animate.css">
@@ -36,8 +36,6 @@
                 window.removeEventListener('scroll', noScroll);
             });
     </script>
-
-
     <!-- preloader -->
     <div id="preloader" class="visible"></div>
 
@@ -62,15 +60,23 @@
                 <li class="nav-item">
                     <a class="nav-link" href="discipline.html">Тәртіп</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Көзқарасымыз</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Көзқарасымыз
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Миссиямыз</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="letter.html">Алғы сөз</a>
+                    </div>
                 </li>
                 <li class="nav-item text-center" id="feedbackBtn">
                     <a class="nav-link" href="index.html">Жазылу</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../ru/mind.html" class="nav-link"><img class="mr-3" src="../images/icons/russia.png"
-                            alt="" width="30">Рус</a>
+                    <a href="../ru/mind.html" class="nav-link"><img class="mr-3" src="../images/icons/russia.png" alt=""
+                            width="30">Рус</a>
                 </li>
             </ul>
         </div>
@@ -86,7 +92,9 @@
             <div class="row">
                 <div class="col-md-6 title p-5">
                     <h3>Біздің балабақшамыздың миссиясы</h3><br>
-                    <p>Балалар - біздің болашағымыз!<br><br>Біз баланың:<br>- айналасында жайлы атмосфера құрғымыз келеді.<br>- дамуына қолайлы жағдай жасау<br>- оған жеткілікті қамқорлық пен назар аударуға<br>- оны құрдастарымен қызықты нәрселермен қызықтыруға қалаймыз.</p>
+                    <p>Балалар - біздің болашағымыз!<br><br>Біз баланың:<br>- айналасында жайлы атмосфера құрғымыз
+                        келеді.<br>- дамуына қолайлы жағдай жасау<br>- оған жеткілікті қамқорлық пен назар аударуға<br>-
+                        оны құрдастарымен қызықты нәрселермен қызықтыруға қалаймыз.</p>
                 </div>
                 <div class="col-md-6 image"></div>
             </div>
@@ -187,7 +195,7 @@
 
     <!-- footer start -->
     <footer class="text-center">
-        <p>Ясли Сад №8. Code Union командасымен құрылған.</p>
+        <p>Балабақша №8. Code Union командасымен құрылған.</p>
     </footer>
     <!-- footer end -->
 
@@ -204,12 +212,21 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    1961 жылы 23 маусымда дүниеге келген. Ұлты-қазақ, білімі-жоғары. Жалпы  педагогикалық еңбек өтілі – 30 жыл,  атқарып  отырған лауазымы бойынша еңбек өтілі – 6 жыл.<br>
-                    1983 жылы Абай атындағы Еңбек Қызыл Ту орденді қазақ педагогика институтын    физика пәнінің мұғалімі деген біліктілікпен бітіріп шықты. <br>
-                    Екінші жоғарғы оқу орнын 2013 жылы Қазақстан инженерлі – педагоги-калық  халықтар Достығы университетін – мектепке дейінгі оқыту мен тәрбиелеу мамандығы бойынша бітірді. <br>
-	                Өзінің еңбек жолын 1983 жылы  Алматы қаласындағы   №45 орта мектепте физика пәні мұғалімі қызметінен бастады. Сонымен қатар  2003 – 2005 жылдары № 147 гимназияда физика пәні мұғалімі,  2005-2008 жж аралығында Алматы қаласының   Жетісу, Түрксіб, Бостандық аудандарында АӘК-де политехникалық циклдегі  әдіскер қызметін, ал 2008-2010 жж аралығында №16 мектепте  физика пәні мұғалімі және директор орынбасары қызметін атқарды.<br>
-                    Кульдархан Баймаханқызы 2010 жылдың қыркүйек  айынан бастап, Алмалы ауданына қарасты  № 8 балабақшаға меңгеруші қызметіне келді. 2013 жылы «Бейбітшілік әлемі» халықаралық Қазақ Творчестволық Бірлестік  қоғамының «Халықаралық ұстаздар одағының» мүшесіне қабылданып,  төс белгісімен  және<br>
-                    2015 жылы  «ҚР білім беру ісінің құрметті қызметкері» атты төсбелгісімен марапатталды.
+                    1961 жылы 23 маусымда дүниеге келген. Ұлты-қазақ, білімі-жоғары. Жалпы педагогикалық еңбек өтілі –
+                    30 жыл, атқарып отырған лауазымы бойынша еңбек өтілі – 6 жыл.<br>
+                    1983 жылы Абай атындағы Еңбек Қызыл Ту орденді қазақ педагогика институтын физика пәнінің мұғалімі
+                    деген біліктілікпен бітіріп шықты. <br>
+                    Екінші жоғарғы оқу орнын 2013 жылы Қазақстан инженерлі – педагоги-калық халықтар Достығы
+                    университетін – мектепке дейінгі оқыту мен тәрбиелеу мамандығы бойынша бітірді. <br>
+                    Өзінің еңбек жолын 1983 жылы Алматы қаласындағы №45 орта мектепте физика пәні мұғалімі қызметінен
+                    бастады. Сонымен қатар 2003 – 2005 жылдары № 147 гимназияда физика пәні мұғалімі, 2005-2008 жж
+                    аралығында Алматы қаласының Жетісу, Түрксіб, Бостандық аудандарында АӘК-де политехникалық циклдегі
+                    әдіскер қызметін, ал 2008-2010 жж аралығында №16 мектепте физика пәні мұғалімі және директор
+                    орынбасары қызметін атқарды.<br>
+                    Кульдархан Баймаханқызы 2010 жылдың қыркүйек айынан бастап, Алмалы ауданына қарасты № 8 балабақшаға
+                    меңгеруші қызметіне келді. 2013 жылы «Бейбітшілік әлемі» халықаралық Қазақ Творчестволық Бірлестік
+                    қоғамының «Халықаралық ұстаздар одағының» мүшесіне қабылданып, төс белгісімен және<br>
+                    2015 жылы «ҚР білім беру ісінің құрметті қызметкері» атты төсбелгісімен марапатталды.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Жабу</button>
@@ -229,12 +246,18 @@
                 </div>
                 <div class="modal-body">
                     1985 жылы Алматы облысы Еңбекшіқазақ ауданында дүниеге келген.<br>
-                    1991 жылы Жамбыл атындағы орта мектеп табалдырығын аттап 2002 жылы үздік аттестатпен бітіріп шықты.<br>
-                    2002 -2007 жж Алматы Технологиялық Университетінде жоғарғы білім алды.  Университетті  үздік дипломмен аяқтап, еңбек жолын аталған университеттің  «Нан өнімдері» кафедрасында  «Кафедра инженері» қызметінен бастады.<br>
-                    2011-2013жж Қазақ мемлекеттік қыздар педагогикалық университетінің  «Тарих» мамандығын бітіріп шықты.<br>
-                    Балабақшада 2012 жылдың ақпан айынан бастап іс-қағаздарын жүргізуші және тәрбиешілік  қызметтерін  атқарды.<br>
+                    1991 жылы Жамбыл атындағы орта мектеп табалдырығын аттап 2002 жылы үздік аттестатпен бітіріп
+                    шықты.<br>
+                    2002 -2007 жж Алматы Технологиялық Университетінде жоғарғы білім алды. Университетті үздік дипломмен
+                    аяқтап, еңбек жолын аталған университеттің «Нан өнімдері» кафедрасында «Кафедра инженері» қызметінен
+                    бастады.<br>
+                    2011-2013жж Қазақ мемлекеттік қыздар педагогикалық университетінің «Тарих» мамандығын бітіріп
+                    шықты.<br>
+                    Балабақшада 2012 жылдың ақпан айынан бастап іс-қағаздарын жүргізуші және тәрбиешілік қызметтерін
+                    атқарды.<br>
                     2016 жылдың қыркүйек айынан бастап әдіскер қызметіне ауыстырылды.<br>
-                    Бүгінгі күнде Оңтүстік Қазақстан педагогикалық университетінде «Мектепке дейінгі тәрбие мен білім беру» мамандығы бойынша өз білімін жалғастыруда.
+                    Бүгінгі күнде Оңтүстік Қазақстан педагогикалық университетінде «Мектепке дейінгі тәрбие мен білім
+                    беру» мамандығы бойынша өз білімін жалғастыруда.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Жабу</button>
@@ -274,8 +297,10 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    1965 жылы Алматы облысы Сарқант ауданында  Талапты ауылында дүниеге келген.<br>
-                    Осы ауылдағы мектепті бітіріп, 1983 жылы Қазақ ССр денсаулық сақтау министрлігінің Республикалық медицина училищесіне оқуға түсіп, аталған оқу орнында 1985 жылы «Медицина сестрасы» мамандығын алып шықты.<br>
+                    1965 жылы Алматы облысы Сарқант ауданында Талапты ауылында дүниеге келген.<br>
+                    Осы ауылдағы мектепті бітіріп, 1983 жылы Қазақ ССр денсаулық сақтау министрлігінің Республикалық
+                    медицина училищесіне оқуға түсіп, аталған оқу орнында 1985 жылы «Медицина сестрасы» мамандығын алып
+                    шықты.<br>
                     Өзінің еңбек жолын 1985 жылдың тамыз айынан «учаскелік медбике» қызметінен бастады.<br>
                     Балабақшада 2013 жылдың наурызынан бастап медбике және диеталық бике қызметін атқарып келеді.
                 </div>
@@ -296,8 +321,10 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    1971 жылы Бішкек қаласында дүниеге келген. Оңтүстік Қазақстан облысы Созақ ауданына қарасты Тайқоңыр ауылындағы  мектеп табалдырығын аттап, 1989 жылы бітірді.<br>
-                    1990-1995жж Алматы халық шаруашылығы институтында «Бюджеттік есеп және аудиторлық қызмет» мамандығы бйынша білім алды. <br>
+                    1971 жылы Бішкек қаласында дүниеге келген. Оңтүстік Қазақстан облысы Созақ ауданына қарасты Тайқоңыр
+                    ауылындағы мектеп табалдырығын аттап, 1989 жылы бітірді.<br>
+                    1990-1995жж Алматы халық шаруашылығы институтында «Бюджеттік есеп және аудиторлық қызмет» мамандығы
+                    бйынша білім алды. <br>
                     1994 жылдан бастап есепші қызметін атқарып келеді.<br>
                     МКҚК №8 балабақшада 2002 жылдың ақпан айынан бастап бас есепші қызметін атқаруда.
                 </div>
