--- a/kindergarten/ru/discipline.html
+++ b/kindergarten/ru/discipline.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>График работы Детского Сада</title>
+    <title>Времяпровождение детей | Ясли-сад №8</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../style/animate.css">
@@ -62,8 +62,16 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Дисциплина</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="mind.html">Взгляд</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Взгляд
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="mind.html">Миссия</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="letter.html">Приветсвенное слово</a>
+                    </div>
                 </li>
                 <li class="nav-item text-center" id="feedbackBtn">
                     <a class="nav-link" href="index.html">Записаться</a>
