--- a/kindergarten/ru/mind.html
+++ b/kindergarten/ru/mind.html
@@ -62,8 +62,16 @@
                 <li class="nav-item">
                     <a class="nav-link" href="discipline.html">Дисциплина</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Взгляд</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Взгляд
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Миссия</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="letter.html">Приветсвенное слово</a>
+                    </div>
                 </li>
                 <li class="nav-item text-center" id="feedbackBtn">
                     <a class="nav-link" href="index.html">Записаться</a>
