--- a/kindergarten/kz/discipline.html
+++ b/kindergarten/kz/discipline.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Балалар уақытты қалай өткізеді | Яслы-сад №8</title>
+    <title>Балалар уақытты қалай өткізеді | Балабақша №8</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../style/animate.css">
@@ -62,8 +62,16 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Тәртіп</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="mind.html">Көзқарасымыз</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Көзқарасымыз
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="mind.html">Миссиямыз</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="letter.html">Алғы сөз</a>
+                    </div>
                 </li>
                 <li class="nav-item text-center" id="feedbackBtn">
                     <a class="nav-link" href="index.html">Жазылу</a>
@@ -159,7 +167,7 @@
 
     <!-- footer start -->
     <footer class="text-center">
-        <p>Ясли Сад №8. Code Union командасымен құрылған.</p>
+        <p>Балабақша №8. Code Union командасымен құрылған.</p>
     </footer>
     <!-- footer end -->
 
