--- a/kindergarten/kz/growth.html
+++ b/kindergarten/kz/growth.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>График работы Детского Сада</title>
+    <title>Қосымша үйірмелер | Балабақша №8</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../style/animate.css">
@@ -62,8 +62,16 @@
                 <li class="nav-item">
                     <a class="nav-link" href="discipline.html">Тәртіп</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="mind.html">Көзқарасымыз</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Көзқарасымыз
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="mind.html">Миссиямыз</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="letter.html">Алғы сөз</a>
+                    </div>
                 </li>
                 <li class="nav-item text-center" id="feedbackBtn">
                     <a class="nav-link" href="index.html">Жазылу</a>
@@ -94,7 +102,7 @@
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Бұрыңғы</span>
+                    <span class="sr-only">Артқа</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -139,7 +147,7 @@
         </div>
     </section>
 
-    <h3 class="text-center">Балаңыз нені үйренеді</h3>
+    <h3 class="text-center">Балаңыз не үйренеді</h3>
 
     <section class="pb-5">
         <div class="container">
@@ -176,7 +184,7 @@
 
     <!-- footer start -->
     <footer class="text-center">
-        <p>Ясли Сад №8. Code Union командасымен құрылған.</p>
+        <p>Балабақша №8. Code Union командасымен құрылған.</p>
     </footer>
     <!-- footer end -->
 
