--- a/kindergarten/kz/learning.html
+++ b/kindergarten/kz/learning.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Күн тәртібі | Яслы-сад №8</title>
+    <title>Күн тәртібі | Балабақша №8</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../style/animate.css">
@@ -62,8 +62,16 @@
                 <li class="nav-item">
                     <a class="nav-link" href="discipline.html">Тәртіп</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="mind.html">Көзқарасымыз</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Көзқарасымыз
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="mind.html">Миссиямыз</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="letter.html">Алғы сөз</a>
+                    </div>
                 </li>
                 <li class="nav-item text-center" id="feedbackBtn">
                     <a class="nav-link" href="index.html">Жазылу</a>
@@ -83,7 +91,7 @@
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
                 <p class="timeline-event-thumbnail">08:00 - 9:00</p>
-                <h3>Балалады қабылдау</h3>
+                <h3>Балаларды қабылдау</h3>
                 <h4>Біз сағат 8-ден бастап істейміз</h4>
                 <p>
                     Таңертеңгілік жаттығуды бір мұғалім, жазда - көшеде, музыкалық сүйемелдеумен жүргізеді. Жаттығу кезінде балалар әртүрлі спорттық жабдықтармен спорттық ойындар ойнайды.
@@ -204,7 +212,7 @@
 
     <!-- footer start -->
     <footer class="text-center">
-        <p>Ясли Сад №8. Code Union командасымен құрылған.</p>
+        <p>Балабақша №8. Code Union командасымен құрылған.</p>
     </footer>
     <!-- footer end -->
 
